Add blazor wasm skeleton

--- a/src/mark.davison.spacetraders.avalonia.ui/Views/Authenticated/WaypointsInfoPageView.axaml
+++ b/src/mark.davison.spacetraders.avalonia.ui/Views/Authenticated/WaypointsInfoPageView.axaml
@@ -13,7 +13,7 @@
 		<vm:WaypointsInfoPageViewModel/>
 	</Design.DataContext>
 
-	<Grid VerticalAlignment="Stretch">
+	<Grid VerticalAlignment="Stretch" HorizontalAlignment="Center">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="auto" />
 			<RowDefinition Height="*" />
