--- a/src/WEB/mark.davison.spacetraders.web.components/Pages/Dashboard.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/Pages/Dashboard.razor
@@ -29,7 +29,8 @@
         <MudTable Items="@AccountState.Value.Accounts" Hover>
             <HeaderContent>
                 <MudTh>Identifier</MudTh>
-                <MudTh>Email</MudTh><MudTh></MudTh>
+                <MudTh>Email</MudTh>
+                <MudTh></MudTh>
             </HeaderContent>
             <RowTemplate>
                 <MudTd DataLabel="Identifier">
