move shipyard to component

--- a/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
@@ -9,3 +9,4 @@
 @using mark.davison.common.client.Components.CommandMenu
 @using mark.davison.spacetraders.shared.constants
 @using mark.davison.spacetraders.web.features.Store.AccountUseCase
+@using mark.davison.spacetraders.web.components.Pages.Waypoint
