--- a/src/WEB/mark.davison.spacetraders.web.components/Pages/Waypoint/Shipyard.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/Pages/Waypoint/Shipyard.razor
@@ -11,7 +11,6 @@ else
     <MudText Typo="Typo.subtitle2">Ships available to purchase</MudText>
     <MudTable Items="@ShipyardDto.ShipyardShips">
         <HeaderContent>
-            <MudTh>Type</MudTh>
             <MudTh>Name</MudTh>
             <MudTh>Supply</MudTh>
             <MudTh>Price</MudTh>
@@ -19,9 +18,6 @@ else
             <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Type">
-                <MudText Typo="Typo.body2">@context.Type</MudText>
-            </MudTd>
             <MudTd DataLabel="Name">
                 <MudText Typo="Typo.body2">@context.Name</MudText>
             </MudTd>
@@ -35,14 +31,15 @@ else
                 <MudText Typo="Typo.body2">@context.Description</MudText>
             </MudTd>
             <MudTd>
-                @*TODO Command menu to allow purchase*@
+                <CommandMenu OnCommandMenuItemSelected="@(_ => CommandMenuItemSelected(_, context))"
+                             Items="@_commandMenuItems" />
             </MudTd>
         </RowTemplate>
     </MudTable>
 
     <MudDivider Class="my-4" DividerType="DividerType.FullWidth" />
 
-    <MudText Typo="Typo.subtitle2">Ships recently purchased</MudText>
+    <MudText Typo="Typo.subtitle2">Ships purchased recently</MudText>
     <MudTable Items="@ShipyardDto.ShipyardTransactions">
         <HeaderContent>
             <MudTh>Type</MudTh>
