--- a/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
@@ -10,3 +10,4 @@
 @using mark.davison.spacetraders.shared.constants
 @using mark.davison.spacetraders.web.features.Store.AccountUseCase
 @using mark.davison.spacetraders.web.components.Pages.Waypoint
+@using mark.davison.spacetraders.web.components.Pages.Ship
