ability to dock orbit dock orbit etc

--- a/src/WEB/mark.davison.spacetraders.web.components/Pages/Ship/ShipNavigation.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/Pages/Ship/ShipNavigation.razor
@@ -1,10 +1,25 @@
 ﻿<MudStack Row>
+    @if (ShipDto.Nav.Status == "DOCKED")
+    {
     <MudButton ButtonType="ButtonType.Submit"
                Color="Color.Primary"
                StartIcon="@Icons.Material.Filled.Outbound"
                Variant="Variant.Filled"
                Size="Size.Large"
-                Disabled="@(ShipDto.Nav.Status == "IN_ORBIT")"
+               Disabled="@(ShipDto.Nav.Status == "IN_ORBIT")"
                IconSize="Size.Large"
                OnClick="@MoveShipToOrbit">Orbit</MudButton>
+
+    }
+    else 
+    {
+    <MudButton ButtonType="ButtonType.Submit"
+               Color="Color.Primary"
+               StartIcon="@Icons.Material.Filled.Outbound"
+               Variant="Variant.Filled"
+               Size="Size.Large"
+               Disabled="@(ShipDto.Nav.Status != "IN_ORBIT")"
+               IconSize="Size.Large"
+               OnClick="@DockShip">Dock</MudButton>
+    }
 </MudStack>
