--- a/src/WEB/mark.davison.spacetraders.web.components/Pages/Ship/ShipNavigation.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/Pages/Ship/ShipNavigation.razor
@@ -6,7 +6,7 @@
                StartIcon="@Icons.Material.Filled.Outbound"
                Variant="Variant.Filled"
                Size="Size.Large"
-               Disabled="@(ShipDto.Nav.Status == "IN_ORBIT")"
+               Disabled="@(ShipDto.Nav.Status == "IN_ORBIT" || _inProgress)"
                IconSize="Size.Large"
                OnClick="@MoveShipToOrbit">Orbit</MudButton>
 
@@ -15,11 +15,53 @@
     {
     <MudButton ButtonType="ButtonType.Submit"
                Color="Color.Primary"
-               StartIcon="@Icons.Material.Filled.Outbound"
+               StartIcon="@Icons.Material.Filled.TransitEnterexit"
                Variant="Variant.Filled"
                Size="Size.Large"
-               Disabled="@(ShipDto.Nav.Status != "IN_ORBIT")"
+               Disabled="@(ShipDto.Nav.Status != "IN_ORBIT" || _inProgress)"
                IconSize="Size.Large"
                OnClick="@DockShip">Dock</MudButton>
     }
 </MudStack>
+
+@if (ShipDto.Nav.Status == "IN_TRANSIT")
+{
+    <MudText Typo="Typo.body1">@($"In transit from {ShipDto.Nav.Route.Origin} ({ShipDto.Nav.Route.OriginType}) to {ShipDto.Nav.Route.Destination} ({ShipDto.Nav.Route.DestinationType})")</MudText>
+    <MudText Typo="Typo.body1">@($"Left {ShipDto.Nav.Route.Departure.Humanize()}, arriving {ShipDto.Nav.Route.Arrival.Humanize()}")</MudText>
+}
+
+@if (ShipDto.Nav.Status == "IN_ORBIT")
+{
+    @* 
+        Control to search for waypoints by trait? or by waypoint type
+    *@
+
+    <MudStack Row>
+        <MudTextField T="string" @bind-Text="NavigationSystemText" Label="Destination" />
+
+        <MudButton ButtonType="ButtonType.Submit"
+                   Color="Color.Primary"
+                   StartIcon="@Icons.Material.Filled.Search"
+                   Variant="Variant.Filled"
+                   Size="Size.Small"
+                   Disabled="@(string.IsNullOrEmpty(NavigationSystemText))"
+                   IconSize="Size.Large"
+                   OnClick="@(() => SearchDestination(NavigationSystemText))" />
+    </MudStack>
+    @if (NavigationDestination != null)
+    {
+        <MudPaper Class="pa-4">
+            <MudText>@($"Waypoint: {NavigationDestination.WaypointSymbol}")</MudText>
+            <MudText>@($"Type: {NavigationDestination.Type}")</MudText>
+            <MudText>@($"Traits: {string.Join(", ", NavigationDestination.Traits)}")</MudText>
+        </MudPaper>
+        <MudButton ButtonType="ButtonType.Submit"
+                   Color="Color.Primary"
+                   StartIcon="@Icons.Material.Filled.Navigation"
+                   Variant="Variant.Filled"
+                   Size="Size.Large"
+                   Disabled="@(ShipDto.Nav.Status != "IN_ORBIT" || _inProgress)"
+                   IconSize="Size.Large"
+                   OnClick="@(() => GoToDestination(NavigationDestination))">Go</MudButton>
+    }
+}
