--- a/src/WEB/mark.davison.spacetraders.web.components/Layouts/NavMenu.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/Layouts/NavMenu.razor
@@ -37,6 +37,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        await Task.CompletedTask;
         // if (!string.IsNullOrEmpty(identifier) && string.IsNullOrEmpty(GetHeadquartersSystem(identifier)))
         // {
         //     await StoreHelper.DispatchAndWaitForResponse<FetchAgentAction, UpdateAgentActionResponse>(new()
