--- a/src/DESKTOP/mark.davison.spacetraders.desktop.ui/Views/MainWindow.axaml
+++ b/src/DESKTOP/mark.davison.spacetraders.desktop.ui/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:mark.davison.spacetraders.desktop.ui.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:mdc="clr-namespace:mark.davison.common.client.desktop.components;assembly=mark.davison.common.client.desktop"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="mark.davison.spacetraders.desktop.ui.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -10,11 +11,8 @@
         Title="mark.davison.spacetraders.desktop.ui">
 
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+	<mdc:BasicApplication DataContext="{Binding BasicApplicationViewModel}"/>
 </Window>
