--- a/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
+++ b/src/WEB/mark.davison.spacetraders.web.components/_Imports.razor
@@ -3,8 +3,8 @@
 @using Humanizer
 @using MudBlazor
 @using Microsoft.AspNetCore.Components.Routing
-@using mark.davison.common.client.Components
-@using mark.davison.common.client.Form
-@using mark.davison.common.client.abstractions.Authentication
-@using mark.davison.common.client.Components.CommandMenu
+@using mark.davison.common.client.web.Components
+@using mark.davison.common.client.web.Form
+@using mark.davison.common.client.web.abstractions.Authentication
+@using mark.davison.common.client.web.Components.CommandMenu
 @using mark.davison.spacetraders.shared.constants
