--- a/src/WEB/mark.davison.spacetraders.web.ui/_Imports.razor
+++ b/src/WEB/mark.davison.spacetraders.web.ui/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using mark.davison.spacetraders.web.ui
-@using mark.davison.common.client.Authentication
+@using mark.davison.common.client.web.Authentication
 @using mark.davison.spacetraders.web.components
 @using mark.davison.spacetraders.web.components.Layouts
